update events reporter with new config values

--- a/style.less
+++ b/style.less
@@ -209,7 +209,7 @@ header {
       text-transform: uppercase;
     }
 
-    .club-name {
+    .sg-name {
       bottom: 2px;
       left: 7px;
       margin-bottom: 3px !important;
@@ -248,7 +248,7 @@ header {
     box-shadow: 0px 3px 2px rgba(0,0,0,.15);
   }
 
-  .club-country .icon-map-marker {
+  .sg-country .icon-map-marker {
     color: #2b488e;
     opacity: .5;
     position: relative;
@@ -256,7 +256,7 @@ header {
     top: 2px;
   }
 
-  .club-country, .event-attendance {
+  .sg-country, .event-attendance {
     line-height: 18px;
   }
 
@@ -270,11 +270,11 @@ header {
     font-size: 14px;
   }
 
-  .club-country {
+  .sg-country {
     font-size: 14px;
   }
 
-  .club-name {
+  .sg-name {
     color: rgba(0,0,0,.8);
     margin: 0 0 5px 0;
     font-size: 18px;
